* Fixed getDeclaredConstructors usage in LazyYamlClosure * Fixed LazyYamlClosureTests getCodeClosure reference